* 1.1.*
- Built against svnClientAdapter r2392 and Subversion 1.3.1,
  incorporating numerous bug fixes and improvements from both.
- Added support for javasvn adapter
- Added
  
* 1.0.0