@@ -187,13 +187,8 @@ public class Update extends SvnCommand {
 	 * @param revision
 	 */
 	public void setRevision(String revision) {
-		try {
-			this.revision = SVNRevision.getRevision(revision);
-		} catch (ParseException e) {
-			this.revision = null;
-		}
+		this.revision = getRevisionFrom(revision);
 	}
-
 
 	/**
 	 * Adds a set of files to update
