@@ -2,6 +2,10 @@
 - Built against svnClientAdapter r2392 and Subversion 1.3.1,
   incorporating numerous bug fixes and improvements from both.
 - Added support for javasvn adapter
+- Added "url" option to <propget> command
+- Added "lastChangedDateProperty" to <status> command
+- Added "dateFormatter" attribute to <svn> task
+
 - Added
   
 * 1.0.0
